<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity02_parent_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/old_audio_cassette"
    android:orientation="vertical"
    android:padding="@dimen/parent_view_padding"
    tools:context="com.example.kasparasza.musicstructureapp.SetTrainingTypeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activity02_purpose_text"
            style="@style/Explanatory_TextView_Style_01"
            android:text="@string/Activity_02_purpose_text" />

        <LinearLayout style="@style/LinearLayout_style_01">

            <android.support.v7.widget.CardView
                android:id="@+id/set_training_type_button"
                style="@style/Card_View_Style_01">

                <LinearLayout style="@style/LinearLayout_style_02">

                    <ImageView
                        android:id="@+id/set_training_type_image"
                        style="@style/Image_Style_01"
                        android:src="@drawable/level_list_01" />

                    <TextView
                        android:id="@+id/training_type_text"
                        style="@style/Card_TextView_Style_01"
                        android:text="@string/training_type_01" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="@dimen/length_of_empty_view_01"
                android:layout_height="match_parent" />

            <android.support.v7.widget.CardView
                android:id="@+id/start_music_palyer_button"
                style="@style/Card_View_Style_01">

                <LinearLayout style="@style/LinearLayout_style_02">

                    <ImageView
                        style="@style/Image_Style_01"
                        android:src="@drawable/play_music_image" />

                    <TextView
                        style="@style/Card_TextView_Style_01"
                        android:text="@string/text_004" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout style="@style/LinearLayout_style_01">

            <android.support.v7.widget.CardView
                android:id="@+id/set_run_distance_CardView"
                style="@style/Card_View_Style_01">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/parent_view_padding">

                    <TextView
                        android:id="@+id/set_distance_text"
                        style="@style/Card_TextView_Style_01"
                        android:text="@string/set_run_param_01" />

                    <EditText
                        android:id="@+id/set_distance_input"
                        style="@style/EditText_style_01"
                        android:backgroundTint="@color/colorOfEditText"
                        android:hint="@string/set_run_param_02"
                        android:maxLength="5" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="@dimen/length_of_empty_view_01"
                android:layout_height="match_parent" />

            <android.support.v7.widget.CardView
                android:id="@+id/set_number_of_repeats"
                style="@style/Card_View_Style_01">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/parent_view_padding">

                    <TextView
                        android:id="@+id/set_number_of_repeats_text"
                        style="@style/Card_TextView_Style_01"
                        android:text="@string/set_run_param_03" />

                    <EditText
                        android:id="@+id/set_number_of_repeats_input"
                        style="@style/EditText_style_01"
                        android:backgroundTint="@color/colorOfEditText"
                        android:hint="@string/set_run_param_04"
                        android:maxLength="2" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="@dimen/length_of_empty_view_01"
                android:layout_height="match_parent" />

            <android.support.v7.widget.CardView
                android:id="@+id/set_distance_of_break_CardView"
                style="@style/Card_View_Style_01">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/parent_view_padding">

                    <TextView
                        android:id="@+id/set_distance_of_break_text"
                        style="@style/Card_TextView_Style_01"
                        android:text="@string/set_run_param_05" />

                    <EditText
                        android:id="@+id/set_distance_of_break_input"
                        style="@style/EditText_style_01"
                        android:backgroundTint="@color/colorOfEditText"
                        android:hint="@string/set_run_param_06"
                        android:maxLength="5" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout style="@style/LinearLayout_style_01">

            <android.support.v7.widget.CardView
                android:id="@+id/link_run_to_music_button"
                style="@style/Card_View_Style_01">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/parent_view_padding">

                    <TextView
                        android:id="@+id/link_run_to_music_headline"
                        style="@style/Card_TextView_Style_01"
                        android:text="@string/link_run_to_music" />

                    <TextView
                        android:id="@+id/link_run_to_music_text"
                        style="@style/Card_TextView_Style_01"
                        android:text="@string/link_run_to_music_01"
                        android:textSize="@dimen/text_size_03" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <View
                android:layout_width="@dimen/length_of_empty_view_01"
                android:layout_height="match_parent" />

            <android.support.v7.widget.CardView
                android:id="@+id/coach_support_button"
                style="@style/Card_View_Style_01">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/parent_view_padding">

                    <TextView
                        android:id="@+id/coach_support_headline"
                        style="@style/Card_TextView_Style_01"
                        android:text="@string/coach_support" />

                    <TextView
                        android:id="@+id/coach_support_text"
                        style="@style/Card_TextView_Style_01"
                        android:text="@string/coach_support_01"
                        android:textSize="@dimen/text_size_03" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
